fix ukuran mengapa

--- a/assets/global/css/custom/mediaquery_home.css
+++ b/assets/global/css/custom/mediaquery_home.css
@@ -229,6 +229,12 @@
     }
 }
 
+@media screen and (min-width: 1350px){
+	.mengapa-bg-parallax img{
+		width: 100%;
+	}
+}
+
 @media screen and (min-width: 1385px){
 	.kategori-1{
 		width: 100%;
